--- a/index.html
+++ b/index.html
@@ -10,15 +10,27 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title">A<span class="text-primary">z</span>im</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h3 class="banner-greeting">Hi I am</h3>
+                <h1 class="banner-title">Azim Sarker</h1>
+                <p>Shot what able cold new see hold.Friendly as an
+                 betrayed formerly he.Morning because as to society
+                behaved moments</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="DP" src="images/Azim Sarker.jpg" alt="">
+        </div>
     </header>
     <main>
 
