--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="banner-contant">
                 <h3 class="banner-greeting">Hi I am</h3>
                 <h1 class="banner-title">Azim Sarker</h1>
-                <p>Shot what able cold new see hold.Friendly as an
+                <p class="peragrahp">Shot what able cold new see hold.Friendly as an
                  betrayed formerly he.Morning because as to society
                 behaved moments</p>
                 <button class="btn-primary">Download CV</button>
@@ -33,7 +33,36 @@
         </div>
     </header>
     <main>
-
+         <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+            I am a desigenr & developer with a passion for web
+            design. I enjoy developing simple, clean and slick
+            websites that provide real value to the end user.
+            Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within
+            time and budget which meets clients requirements in 
+            our meta. 
+            </p>
+            <div class="about-info-container">
+                <div class="about-inf">
+                    <h4 class="inf-title">Name</h4>
+                    <p class="info-description">Azim Sarker</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="inf-title">Email</h4>
+                    <p class="info-description">azimsarker09</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="inf-title">Date of Birth</h4>
+                    <p class="info-description">02 December 1999</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="inf-title">From</h4>
+                    <p class="info-description">Cumilla, BD</p>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
