complet the about section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="DP" src="images/Azim Sarker.jpg" alt="">
+            <img class="DP" src="images/hardy.png" alt="">
         </div>
     </header>
     <main>
@@ -45,24 +45,120 @@
             our meta. 
             </p>
             <div class="about-info-container">
-                <div class="about-inf">
-                    <h4 class="inf-title">Name</h4>
+                <div class="about-info">
+                    <h4 class="info-title">Name</h4>
                     <p class="info-description">Azim Sarker</p>
                 </div>
-                <div class="about-inf">
-                    <h4 class="inf-title">Email</h4>
+                <div class="about-info">
+                    <h4 class="info-title">Email</h4>
                     <p class="info-description">azimsarker09</p>
                 </div>
-                <div class="about-inf">
-                    <h4 class="inf-title">Date of Birth</h4>
+                <div class="about-info">
+                    <h4 class="info-title">Date of Birth</h4>
                     <p class="info-description">02 December 1999</p>
                 </div>
-                <div class="about-inf">
-                    <h4 class="inf-title">From</h4>
+                <div class="about-info">
+                    <h4 class="info-title">From</h4>
                     <p class="info-description">Cumilla, BD</p>
                 </div>
             </div>
          </section>
+         <section class="work-info">
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software 
+            for clients all over the world. Below is a quick overview of 
+            my main technical skill sets and technologies i use. Want to 
+            find out more about my experience? Check out my online resume 
+            and project portfolio.</p>
+        <div class="skill-container">
+           <div class="skill">
+                <img src="images/icons/js.png" alt="">
+                <h3 class="skill-title">Vanilla JavaScript</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon 
+                above to any of the 1500+ FontAwesome 5 free icons available. 
+                Aenean commodo ligula eget dolor.</p>
+           </div>     
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <h3 class="skill-title">Node.js</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to 
+                any of the 1500+ FontAwesome 5 free icons available. Aenean commodo 
+                ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                     
+                <img src="images/icons/mongo.png" alt="">
+                <h3 class="skill-title">MongoDB</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any 
+                of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula 
+                eget dolor.</p>
+            </div>               
+        </div>
+         </section>
+         <!-- Resume section  -->
+          <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.resume-column-title  -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-institute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                        <h3 class="resume-institute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h3 class="resume-institute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
 
