complet responsib for small device

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  betrayed formerly he.Morning because as to society
                 behaved moments</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary btn-contact" >Contact</button>
             </div>
             <img class="DP" src="images/hardy.png" alt="">
         </div>
